--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,14 @@ python = "^3.12"
 urllib3 = "^2.2.1"
 requests = "^2.31.0"
 loguru = "^0.7.2"
+flake8 = "^7.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.2.0"
 isort = "^5.13.2"
+mypy = "^1.8.0"
+types-requests = "^2.31.0.20240218"
 
 [build-system]
 requires = ["poetry-core"]
@@ -22,3 +25,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 120
+
+[tool.flake8]
+max-line-length = 120
+max-complexity = 10
