--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ urllib3 = "^2.2.1"
 requests = "^2.31.0"
 loguru = "^0.7.2"
 flake8 = "^7.0.0"
+pandas = "^2.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -20,6 +21,7 @@ mypy = "^1.8.0"
 types-requests = "^2.31.0.20240218"
 tqdm = "^4.66.2"
 types-tqdm = "^4.66.0.20240106"
+pandas-stubs = "^2.2.0.240218"
 
 [build-system]
 requires = ["poetry-core"]
